[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/forms/LogInForm.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://networking/CustomHTTPRequest.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/uiComponents/CustomLineEdit.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/uiComponents/LoadingButton.tscn" type="PackedScene" id=5]

[node name="LogInForm" type="PanelContainer"]
margin_top = 215.0
margin_right = 400.0
margin_bottom = 385.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 170.0

[node name="LogInForm" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 376.0
margin_bottom = 153.0

[node name="Label" type="Label" parent="MarginContainer/LogInForm"]
margin_right = 366.0
margin_bottom = 20.0
text = "Log In"

[node name="Username" parent="MarginContainer/LogInForm" instance=ExtResource( 4 )]
margin_top = 28.0
margin_bottom = 58.0
secret = false
placeholder_text = "Username"

[node name="Password" parent="MarginContainer/LogInForm" instance=ExtResource( 4 )]
is_password = true

[node name="SubmitButton" parent="MarginContainer/LogInForm" instance=ExtResource( 5 )]
margin_top = 104.0
margin_bottom = 143.0
default_text = "Submit"

[node name="SubmitHTTPRequest" parent="MarginContainer/LogInForm" instance=ExtResource( 3 )]

[connection signal="pressed" from="MarginContainer/LogInForm/SubmitButton" to="." method="_on_SubmitButton_pressed"]
